syntax = "proto3";

package pyggpot.coin;

import "github.com/mwitkow/go-proto-validators/validator.proto";
import "protoc-gen-swagger/options/annotations.proto";

option go_package = "github.com/aspiration-labs/pyggpot/coin_service;coin_service";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
    info: {
        title: "Aspiration Pyggpot API";
        version: "1.0";
    };
    external_docs: {
        url: "https://github.com/aspiration-labs/pyggpot";
        description: "Aspiration Pyggpot (Piggy Bank)";
    }
    schemes: HTTP;
};

//
// RPC spec
//

service Coin {
    rpc AddCoins(AddCoinsRequest) returns (CoinsListResponse);
    rpc RemoveCoins(RemoveCoinsRequest) returns (CoinsListResponse);
}

//
// Request schema
//
message Coins {
    enum Kind {
        UNKNOWN = 0;
        BRONZE = 1;
        SILVER = 10;
        GOLD = 100;
    }
    Kind kind = 1; // required
    int32 count = 2 [(validator.field) = {int_gt: 0}];
}

message AddCoinsRequest {
    int32 pot_id = 1 [(validator.field) = {int_gt: 0}]; // required
    repeated Coins coins = 2;
}

message RemoveCoinsRequest {
    int32 pot_id = 1 [(validator.field) = {int_gt: 0}]; // required
    int32 count = 2 [(validator.field) = {int_gt: 0}];
}

//
// Response schema
//
message CoinsListResponse {
    repeated Coins coins = 1;
}
